# sound-mcp

./: .gitignore  README.md  pyproject.toml
src/sound_mcp/: server.py
