[project]
name = "sound-mcp"
version = "0.1.0"
description = "FastMCP server that plays notification sounds and desktop alerts."
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0"]

[project.scripts]
sound-mcp = "sound_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sound_mcp"]
